# niek-kamer.github.io

./: .editorconfig  .gitignore  LICENSE  README.md  SECURITY.md  astro.config.mjs  biome.json  eslint.config.mjs  lefthook.yml  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
.zed/: settings.json  tasks.json
cv/: cv.typ
public/: robots.txt  site.webmanifest
public/fonts/: fonts.css
src/: content.config.ts
src/components/icons/: Icon.astro
src/components/primitives/: Cluster.astro  Container.astro  Grid.astro  ProseBand.astro  Sidebar.astro  Stack.astro  Switcher.astro  WideBand.astro
src/components/project/: ProjectCard.astro
src/components/seo/: BaseHead.astro
src/components/writing/: PostCard.astro  ReadTime.astro  ShippedImpactCard.astro  ShippedImpactDetail.astro
src/content/about/: about.mdx
src/content/projects/: bno055-driver-fork.mdx  plonky3-goldilocks-perf.mdx  zkmcu.mdx
src/content/writing/: goldilocks-poseidon1-avx-mds-fallback.mdx  goldilocks-poseidon2-avx512-falsifications.mdx  goldilocks-poseidon2-cross-permute-batching.mdx  (+3 more)
src/data/: site.ts
src/layouts/: Article.astro  BaseLayout.astro  ProjectLayout.astro
src/lib/: og.ts  readtime.ts  rehype-wrap-tables.ts
src/pages/: 404.astro  about.astro  contact.astro  index.astro
src/styles/: breakpoints.css.ts  global.css.ts  prose.css.ts  sprinkles.css.ts  theme.css.ts
tokens-gen/: Cargo.toml
tokens-gen/src/: emit.rs  fluid.rs  lib.rs  main.rs
(+28 files in other folders)
